# Robokin

./: .gitignore  inicial.html  robokin_bd.sql
.githooks/: config_hooks.bat  pre-commit  prepare-commit-msg
.github/workflows/: protect-main.yml
ROS/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS/log/: latest_build
ROS/robokin/robokin/: CMakeLists.txt  package.xml
WEB/: Makefile  index.html  main.js
WEB/Servicios/: call_service.js
WEB/api/: actualizarmesa.php  actualizarpedido.php  actualizarpedidoproducto.php  actualizarpose.php  actualizarproducto.php  actualizarproducto2.php  actualizarrobot.php  actualizarruta.php  actualizarusuario.php  cerrarsesion.php  database.php  db.php  eliminarmesa.php  eliminarproducto.php  eliminarrobot.php  guardarmesa.php  guardarpedido.php  guardarpedidoproducto.php  guardarpose.php  guardarproducto.php  guardarrobot.php  guardarruta.php  guardarusuario.php  listamesas.php  listapedidos.php  listaproductos.php  listarobots.php  login.php  recuperarmesa.php  recuperarpedido.php  recuperarpedidoproducto.php  recuperarpose.php  recuperarproducto.php  recuperarproducto2.php  recuperarproductospedido.php  recuperarrobot.php  recuperarruta.php  recuperarultimopedido.php  registro.php
WEB/css/: admin.css  control.css  inicio.css  listamesas.css  listapedidos.css  listarobots.css  login.css  mesa.css  option.css  productos.css  styles.css  wip.css
WEB/html/: admin.html  cesta.html  control.html  editarproducto.html  guardarmesa.html  guardarproducto.html  guardarrobots.html  index.html  inicio.html  (+9 more)
(+103 files in other folders)
